Aktueller Stand: - start_use.bat angepasst für Ausführung von maven in use_assembler generierten Package - pom javafx dependency update auf version 21 - assembly.xml contains now also the javafx sdk to be shipped with the end product - javafx sdk included inside use-gui, located in use-gui\lib\javafx-sdk-21.0.5
TODO:
- weitere Funktionalitäten einbauen
- Test ShellIT.java auskommentiert, diesen später irgendwann wieder einbauen