@@ -10,8 +10,8 @@ rem Add -Xss20m to VMARGS when using the generator
 set VMARGS=
 
 set BIN_DIR=%~dp0
-set USE_HOME=%BIN_DIR%..\..\..\..
-set USE_JAR="%USE_HOME%\target\use-gui.jar"
+set USE_HOME=%BIN_DIR%..
+set USE_JAR="%USE_HOME%\lib\use-gui.jar"
 set JAVAFX_LIB="%USE_HOME%\lib\javafx-sdk-21.0.5\lib"
 
 IF NOT EXIST %USE_JAR% (
@@ -20,7 +20,7 @@ IF NOT EXIST %USE_JAR% (
 )
 
 :runApp
-java %VMARGS% --module-path %JAVAFX_LIB% --add-modules javafx.controls,javafx.fxml,javafx.web,javafx.graphics,javafx.swing --add-opens javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED -jar %USE_JAR% -nr %*
+java %VMARGS% --module-path %JAVAFX_LIB% --add-modules javafx.controls,javafx.fxml,javafx.web,javafx.graphics,javafx.swing --add-opens javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED --add-exports javafx.base/com.sun.javafx.event=ALL-UNNAMED -jar %USE_JAR% -nr %*
 
 if "%OS%"=="Windows_NT" @endlocal
 
